06/05 third update